fix navar z-index

--- a/assets/css/sme.css
+++ b/assets/css/sme.css
@@ -1,13 +1,17 @@
 @import url(../css/style.css);
 
 .pro-header{
-    background-image: url(../img/homeBg.jpg);
+  
     background-size: cover;
     background-repeat: no-repeat;
+    min-height: 650px;
+    height: 100vh;
+    max-height: 1080px;
     }
 
 .hero-container{
-    padding:  4vh 0 23.85vh;
+    /* padding:  4vh 0 23.85vh; */
+    height: 100%;
 }
 .hero-title{
     font-weight: 800;
