--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@ body{
 .navbar{
     position: absolute;
     width: 100%;
+    z-index: 100;
 }
 
 .navbar-nav .nav-item:nth-of-type(2n+1){
